--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
+        "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.7.5",
+        "lint-staged": "^13.2.3",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "./vendor/bin/pint",
+            "pre-push": "php artisan test"
+        }
     }
 }
