--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
-        "husky": "^4.3.8",
+        "husky": "^8.0.0",
         "laravel-vite-plugin": "^0.7.5",
         "lint-staged": "^13.2.3",
         "postcss": "^8.4.6",
